crates/cli/src/snapshots/marzano_cli__diff__tests__parse_one_file_diff.snap
---
source: crates/cli/src/diff.rs
expression: parsed
---
- filePath: crates/cli_bin/fixtures/es6/empty_export_object.js
  range:
    RangeWithoutByte:
      start:
        line: 5
        column: 0
      end:
        line: 12
        column: 0
