crates/cli/src/snapshots/marzano_cli__diff__tests__parse_with_multiple_files.snap
---
source: crates/cli/src/diff.rs
expression: parsed
---
- old_path: crates/cli_bin/fixtures/es6/empty_export_object.js
  new_path: crates/cli_bin/fixtures/es6/empty_export_object.js
  before:
    - RangeWithoutByte:
        start:
          line: 5
          column: 0
        end:
          line: 12
          column: 0
  after:
    - RangeWithoutByte:
        start:
          line: 5
          column: 0
        end:
          line: 12
          column: 0
- old_path: crates/cli_bin/fixtures/es6/export_object.js
  new_path: crates/cli_bin/fixtures/es6/export_object.js
  before:
    - RangeWithoutByte:
        start:
          line: 2
          column: 0
        end:
          line: 9
          column: 0
  after:
    - RangeWithoutByte:
        start:
          line: 2
          column: 0
        end:
          line: 11
          column: 0
